# bushfire-drone-simulation

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  README.md  README.rst
bushfire_drone_simulation/: README.rst  setup.cfg  setup.py
bushfire_drone_simulation/big_example_input/: parameters.json
bushfire_drone_simulation/big_example_input/forecasting/: 10000_WB_event_updates.csv  10000_all_targets.csv  10000_simulation_output.csv  10000_water_tanks.csv  gui.json  summary_file.csv
bushfire_drone_simulation/big_example_input/input_data/: scenario_parameters.csv
bushfire_drone_simulation/big_example_input/prioritisation/: gui.json  product_simulation_output.csv  (+3 more)
bushfire_drone_simulation/example_input/: parameters.json
bushfire_drone_simulation/example_input copy/: parameters.json
bushfire_drone_simulation/lightning_data/: 20_pct_storm_2.csv  lightning_utc00190120.csv  lightning_utc12190120.csv
bushfire_drone_simulation/marta_risk_rating/: parameters.json
bushfire_drone_simulation/results/: parameters.json
bushfire_drone_simulation/swarming/: MMT_params.json  forecasting_params.json  parameters.json  simple_parameters.json  swarming_params.json
bushfire_drone_simulation/tests/: aircraft_test.py  conftest.py  coordinators_test.py  gui_test.py  parameters.json  sample_test.py
bushfire_drone_simulation/uav_spawn_locs/: 10_uav_spawn_locs.csv  200_uav_spawn_locs.csv  20_uav_spawn_locs.csv  300_uav_spawn_locs.csv  30_uav_spawn_locs.csv  400_uav_spawn_locs.csv  40_uav_spawn_locs.csv  500_uav_spawn_locs.csv  50_uav_spawn_locs.csv  60_uav_spawn_locs.csv  70_uav_spawn_locs.csv  80_uav_spawn_locs.csv  90_uav_spawn_locs.csv
(+115 files in other folders)
