[metadata]
name = bushfire_drone_simulation
description = "A program for simulating drones checking lightning strike locations for potential fires"
author = Ryan Stocks & Elise Palethorpe
author_email = ryan.stocks@anu.edu.au
license = All rights reseved, 2020 ANU
url = https://github.com/ryanstocks00/anu-bushfire-initiative-simulation

[options]
zip_safe = False
versioning = dev
python_requires = >=3.8
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    typer
    pytest
    pandas
    numpy==1.19.3
    livereload

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bushfire_drone_simulation = bushfire_drone_simulation.main:main
