[metadata]
name = bushfire_drone_simulation
description = "A program for simulating drones checking lightning strike locations for potential fires"
author = Ryan Stocks & Elise Palethorpe
author_email = ryan.stocks@anu.edu.au
license = All rights reseved, 2020-2022 ANU
url = https://github.com/ryanstocks00/anu-bushfire-initiative-simulation

[options]
zip_safe = False
versioning = dev
python_requires = >=3.8
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    typer
    pytest
    pytest-mock
    pandas
    pandas-stubs
    numpy>=1.21.4
    nptyping
    livereload
    matplotlib
    tqdm
    types-requests
    grequests
    pydantic
    opencv-python

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bushfire_drone_simulation = bushfire_drone_simulation.main:main
